public/admin/assets/css/style.css
/* ... */
body :is(.dirham.dirham) {
    font-family: "UAEDirham" !important;
    font-weight: 400 !important;
}
.padd-y {
    padding: 5rem 0;
}

.mar-y {
    margin: 5rem 0;
}

/* ThemeBtn */
.themeBtn {
    width: fit-content;
    display: block;
    color: #fff;
    background: var(--color-primary);
    font-size: 0.85rem;
    outline: none;
    border-radius: 0.4rem;
    font-weight: 600;
    text-align: center;
    padding: 0.65rem 1.5rem;
    border: none;
    position: relative;
    z-index: 1;
    text-transform: capitalize;
    transition: all 300ms;
    cursor: pointer;
}

.themeBtn i {
    font-size: 1.15rem;
}

.themeBtn:has(i) {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.15rem;
}

.themeBtn--outline {
    border: 2px solid #000;
}

.themeBtn--outline-light {
    color: #fff;
    background-color: transparent;
    border: 2px solid #fff;
}

.themeBtn--center {
    margin: 1rem auto;
}

.themeBtn--full {
    width: 100%;
}

.themeBtn:hover {
    background-color: var(--color-primary-dark);
    color: #fff;
}

/* Section Heading */
.section-content {
    color: #00000080;
}

.section-content--light * {
    color: #fff;
}

.section-content .heading {
    font-size: 1.25rem;
    font-weight: 600;
    text-transform: capitalize;
    color: #49424d;
}

.section-content .subHeading {
    color: #000;
    font-size: 0.95rem;
    font-weight: 700;
    letter-spacing: 2px;
    text-transform: uppercase;
}

.section-content p {
    font-size: 0.99rem;
    font-weight: 400;
    line-height: 1.75;
    margin: 0.75rem 0;
    color: #6d6f75;
}

.sidebar {
    width: var(--sidebar-width);
    min-height: 100vh;
    background: #fff;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    transition: transform .2s;
}

.sidebar-header__icon img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.sidebar-header__icon {
    width: 150px;
    height: 35px;
}

a.sidebar-header {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    padding: 2.5rem 0 1rem;
}

a.sidebar-header h2 {
    font-size: 20px;
    font-weight: 700;
    margin-bottom: -5px;
}

ul.sidebar-nav {
    padding: 1.5rem 1rem 2.5rem 0;
    overflow-y: auto;
    height: 90vh;
}

.sidebar-nav .icon {
    width: 20px;
    aspect-ratio: 1/1;
    border-radius: 199%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.15rem;
    cursor: pointer;
    transition: all 300ms;
    line-height: 1;
    /* position: absolute; */
    left: 0.15rem;
    top: 50%;
    /* transform: translateY(-50%); */
}

.custom-dropdown--sub .icon:hover {
    background: #0000001a;
}

.sidebar-nav .icon.icon i {
    font: inherit;
    font-weight: 600;
}

ul.sidebar-nav > li > a {
    width: 100%;
    border-radius: 10px;
    display: flex;
    align-items: center;
    padding: 13px 7px 13px 14px;
    font-size: 14px;
    font-weight: 600;
    text-transform: capitalize;
    color: #777;
    margin-left: 8px;
}

ul.sidebar-nav li a i {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 17px;
}

ul.sidebar-nav li .active {
    background: var(--color-primary);
    color: #fff;
}

.dashboard-content {
    min-height: 100vh;
    padding-bottom: 5rem;
    height: 100%;
}

.layout-content-wrapper{
    --main-content-margin: var(--sidebar-width);
    margin-left: var(--main-content-margin);
    padding: 1.25rem 1.35rem 2rem 1.75rem;
    transition: margin .2s;
}
.dashboard.close-sidebar .sidebar {transform: translateX(-100%);}

.dashboard.close-sidebar .layout-content-wrapper {--main-content-margin: 0;}


.dashboard-header .wrapper {
    display: flex;
    justify-content: space-between;
}

.global-heading-wrapper {
    display: flex;
    gap: 0.6rem;
    align-items: center;
}

.sidebar-toggle {
    width: 36px;
    aspect-ratio: 1/1;
    color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    transition: background 150ms;
    cursor: pointer;
    position: relative;
    left: -7px;
}

.sidebar-toggle i {
    font-size: 1.5rem;
    transition: all 150ms;
}

.sidebar-toggle:hover {
    background: var(--color-primary);
    color: #ffff;
}
.dashboard-header h2 {
    font-size: 1.65rem;
    text-transform: capitalize;
    font-weight: 600;
    color: #49424d;
    margin-bottom: 0;
}

.input-search {
    display: flex;
    align-items: center;
    background: #fff;
    padding: 0 10px;
    border-radius: 7px;
    gap: 7px;
    line-height: 0;
}

.input-search input {
    border: none;
    outline: none;
    text-transform: capitalize;
    color: #777;
    font-size: 13px;
    width: 100%;
}

.input-search .search-icon {
    border: none;
    background: none;
    outline: none;
    font-size: 21px;
    color: #777;
    height: 40px;
}

.custom-sec--form {
    padding-top: 0.25rem;
}

.custom-sec__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 0 1rem;
}

.custom-sec__header .heading {
    margin-bottom: 0;
}

.custom-filters {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 9px;
}

.custom-sec__header .button-dropdown {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2px;
    background: var(--color-primary-light);
    padding: 6px 6px;
    /* border-radius: 6px; */
    font-size: 0.85rem;
    border: none;
    outline: none;
    border-radius: 7px;
}

.custom-sec__header .button-dropdown .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 19px;
    color: #777;
}

a.custom-card__img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.custom-card__img {
    width: 100%;
    height: 145px;
    overflow: hidden;
    position: relative;
}
/* ... */

